# ascii-engine

./: .gitmodules  CMakeLists.txt  README.md  README.txt  compile.bat  driver.cpp
include/: config.hpp  level_model.hpp
include/api/: console.cpp  console.hpp  core.cpp  core.hpp  framebuffer.hpp  input.cpp  input.hpp  keypress_handler.cpp  keypress_handler.hpp  resource_locator.cpp  resource_locator.hpp  timer.cpp  timer.hpp  winapi.hpp
include/api/detail/: circular_queue.hpp  object_binding.hpp  tuple.hpp  vec.hpp
include/audio/: audiochannel.cpp  audiochannel.hpp  audiointerface.cpp  audiointerface.hpp  audiosource.hpp  core.cpp  core.hpp  cxaudio2.h  iaudiosource.hpp  memmem.h
include/audio/source_types/: audiosource_circular.cpp  audiosource_circular.hpp  audiosource_looping.cpp  audiosource_looping.hpp  audiosource_single.cpp  audiosource_single.hpp  iaudiosource.cpp  iaudiosource.hpp
include/config/: compiler.hpp  conditionals.hpp  cpp.hpp  functions.hpp  undefs.hpp  values.hpp
include/config/values/: boolean.hpp  numeral.hpp  valid_integral.hpp
include/engine/: core.hpp  game.hpp  music_player.hpp  tinyphysicsengine.h
include/render/: core.cpp  core.hpp  helper.hpp  small3dlib.h  small3dlib.hpp  tinyphysicsengine.cpp  tinyphysicsengine.h  tinyphysicsengine.hpp
include/ui/: core.cpp  core.hpp  strided_memcpy.cpp  strided_memcpy.hpp  ui_element.hpp  ui_types.hpp
resources/: SPEC  resources.rc
resources/cursors/: dark.cur
resources/ui/: core.uxi  exit.uxi
uigen/: cli.cpp  cli.hpp  core.hpp  driver.cpp
uigen/core/: ctre.hpp  fileloader.cpp  fileloader.hpp  regex.hpp  stack.hpp  utils.hpp
uigen/parser/: filecontext.cpp  filecontext.hpp  filesystem.cpp  filesystem.hpp  globalcontext.cpp  globalcontext.hpp  parserconstruct.cpp  parserconstruct.hpp  parsercore.cpp  parsercore.hpp
